--- a/src/main/resources/ApplicationProjet/stock.fxml
+++ b/src/main/resources/ApplicationProjet/stock.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="742.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.Controller">
+<AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="742.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.Controller">
    <children>
       <Label alignment="CENTER" layoutX="391.0" layoutY="19.0" prefHeight="41.0" prefWidth="375.0" text="Stocks">
          <font>
@@ -13,8 +17,8 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="742.0" stroke="#cdcdcd" strokeType="INSIDE" width="166.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="820.0" AnchorPane.topAnchor="0.0" />
-      <Button layoutY="68.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Commandes" />
-      <TableView fx:id="tableViewStock" layoutX="182.0" layoutY="68.0" prefHeight="633.0" prefWidth="793.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="182.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="68.0">
+      <Button layoutY="80.0" mnemonicParsing="false" onAction="#PageCommande" prefHeight="22.0" prefWidth="166.0" text="Commandes" />
+      <TableView fx:id="tableViewStock" fixedCellSize="0.0" layoutX="182.0" layoutY="68.0" prefHeight="633.0" prefWidth="493.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="70.0">
         <columns>
           <TableColumn fx:id="colNom" prefWidth="125.0" text="Nom" />
           <TableColumn fx:id="colCode" prefWidth="183.0" text="Code" />
@@ -23,10 +27,16 @@
             <TableColumn fx:id="colAchat" prefWidth="137.0" text="Prix Achat" />
             <TableColumn fx:id="colVente" prefWidth="149.0" text="Prix Vente" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <Button fx:id="btnStock" layoutY="2.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Stock" />
-      <Button fx:id="btnCProc" layoutY="35.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Chaine de production" />
-      <Button fx:id="btnHistorique" layoutY="99.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Historique" />
-      <Button layoutY="130.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Paramètre" />
+      <Button fx:id="btnStock" mnemonicParsing="false" onAction="#PageStock" prefHeight="22.0" prefWidth="166.0" text="Stock" />
+      <Button fx:id="btnCProc" layoutY="40.0" mnemonicParsing="false" onAction="#PageChaine" prefHeight="22.0" prefWidth="166.0" text="Chaine de production" />
+      <Button fx:id="btnHistorique" layoutY="120.0" mnemonicParsing="false" onAction="#PageHistorique" prefHeight="22.0" prefWidth="166.0" text="Historique" />
+      <Button layoutY="160.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Paramètre" />
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
