--- a/src/main/resources/ApplicationProjet/historique.fxml
+++ b/src/main/resources/ApplicationProjet/historique.fxml
@@ -17,9 +17,9 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="742.0" stroke="#cdcdcd" strokeType="INSIDE" width="166.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="820.0" AnchorPane.topAnchor="0.0" />
-      <Button fx:id="btnStock" mnemonicParsing="false" onAction="#PageStock" prefHeight="22.0" prefWidth="166.0" text="Stock" />
-      <Button fx:id="btnCommande" layoutY="80.0" mnemonicParsing="false" onAction="#PageCommande" prefHeight="22.0" prefWidth="166.0" text="Commandes" />
-      <Button fx:id="btnCProd" layoutY="40.0" mnemonicParsing="false" onAction="#PageChaine" prefHeight="22.0" prefWidth="166.0" text="Chaine de production" />
+      <Button fx:id="btnStock" mnemonicParsing="false" onMouseClicked="#PageStock" prefHeight="22.0" prefWidth="166.0" text="Stock" />
+      <Button fx:id="btnCommande" layoutY="80.0" mnemonicParsing="false" onMouseClicked="#PageCommande" prefHeight="22.0" prefWidth="166.0" text="Commandes" />
+      <Button fx:id="btnCProd" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#PageChaine" prefHeight="22.0" prefWidth="166.0" text="Chaine de production" />
       <Button fx:id="btnHistorique" layoutY="120.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="166.0" text="Historique" />
       <TableView fx:id="tableViewStock" fixedCellSize="0.0" layoutX="202.0" layoutY="88.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="633.0" prefWidth="493.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="70.0">
          <columns>
@@ -29,7 +29,7 @@
             <TableColumn fx:id="colUnite" prefWidth="91.0" text="Unité" />
             <TableColumn fx:id="colAchat" prefWidth="137.0" text="Prix Achat" />
             <TableColumn fx:id="colVente" prefWidth="149.0" text="Prix Vente" />
-            <TableColumn fx:id="ColOrigine" prefWidth="75.0" text="Origine" />
+            <TableColumn fx:id="colOrigine" prefWidth="75.0" text="Origine" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
