--- a/src/main/resources/ApplicationProjet/stock.fxml
+++ b/src/main/resources/ApplicationProjet/stock.fxml
@@ -5,9 +5,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="bpStock" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerStock">
    <children>
@@ -16,9 +18,9 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="742.0" stroke="#cdcdcd" strokeType="INSIDE" width="166.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="820.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="720.0" stroke="#cdcdcd" strokeType="INSIDE" width="166.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="914.0" AnchorPane.topAnchor="0.0" />
       <Button fx:id="btnStock" mnemonicParsing="false" onAction="#PageStock" prefHeight="22.0" prefWidth="166.0" text="Stock" />
-      <TableView fx:id="tableViewStock" fixedCellSize="0.0" layoutX="182.0" layoutY="68.0" prefHeight="633.0" prefWidth="493.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="70.0">
+      <TableView fx:id="tableViewStock" fixedCellSize="0.0" layoutX="182.0" layoutY="68.0" prefHeight="633.0" prefWidth="697.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="203.0" AnchorPane.topAnchor="70.0">
         <columns>
           <TableColumn fx:id="colNom" prefWidth="125.0" text="Nom" />
           <TableColumn fx:id="colCode" prefWidth="183.0" text="Code" />
@@ -34,6 +36,14 @@
       <Button fx:id="btnCommande" layoutY="80.0" mnemonicParsing="false" onAction="#PageCommande" prefHeight="22.0" prefWidth="166.0" text="Commandes" />
       <Button fx:id="btnCProd" layoutY="40.0" mnemonicParsing="false" onAction="#PageChaine" prefHeight="22.0" prefWidth="166.0" text="Chaine de production" />
       <Button fx:id="btnHistorique" layoutY="120.0" mnemonicParsing="false" onAction="#PageHistorique" prefHeight="22.0" prefWidth="166.0" text="Historique" />
+      <Text layoutX="926.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vendre" wrappingWidth="133.3665771484375">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Text>
+      <Button layoutX="956.0" layoutY="350.0" mnemonicParsing="false" text="Vendre" />
+      <TextField layoutX="908.0" layoutY="251.0" promptText="Code" />
+      <TextField layoutX="908.0" layoutY="298.0" promptText="Quantité" />
    </children>
    <opaqueInsets>
       <Insets />
