--- a/src/main/resources/ApplicationProjet/commande.fxml
+++ b/src/main/resources/ApplicationProjet/commande.fxml
@@ -3,9 +3,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="bpCommande" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerCommande">
    <children>
@@ -19,6 +22,22 @@
       <Button fx:id="btnStock" mnemonicParsing="false" onAction="#PageStock" prefHeight="22.0" prefWidth="166.0" text="Stock" />
       <Button fx:id="btnCProd" layoutY="40.0" mnemonicParsing="false" onAction="#PageChaine" prefHeight="22.0" prefWidth="166.0" text="Chaine de production" />
       <Button fx:id="btnHistorique" layoutY="120.0" mnemonicParsing="false" onAction="#PageHistorique" prefHeight="22.0" prefWidth="166.0" text="Historique" />
+      <TableView fx:id="tableViewStock" fixedCellSize="0.0" layoutX="192.0" layoutY="78.0" prefHeight="633.0" prefWidth="658.0">
+         <columns>
+            <TableColumn fx:id="colNom" prefWidth="125.0" text="Nom" />
+            <TableColumn fx:id="colUnite" prefWidth="91.0" text="Unité" />
+            <TableColumn fx:id="colAchat" prefWidth="137.0" text="Prix Achat" />
+            <TableColumn fx:id="colVente" prefWidth="149.0" text="Prix Vente" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Text layoutX="936.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Achat" wrappingWidth="133.3665771484375">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Text>
    </children>
    <opaqueInsets>
       <Insets />
